--- a/share/spack/docker/spack_fedora/Dockerfile
+++ b/share/spack/docker/spack_fedora/Dockerfile
@@ -24,7 +24,7 @@ RUN dnf update -y && \
         openssh-server        \
         python                \
         tcl                && \
-    git clone --depth 1 git://github.com/llnl/spack.git /spack && \
+    git clone --depth 1 git://github.com/spack/spack.git /spack && \
     rm -rf /spack/.git && dnf clean all
 
 RUN echo "source /usr/share/lmod/lmod/init/bash" \
