--- a/packages.yaml
+++ b/packages.yaml
@@ -28,6 +28,12 @@ packages:
         version: [system]
         buildable: False
 
+    readline:
+        paths:
+            readline@system: /usr
+        version: [system]
+        buildable: False
+
     intel-parallel-studio:
         paths:
             intel-parallel-studio@cluster.2017.5%intel@17.0.5+advisor+clck+daal+inspector+ipp+itac+mkl+mpi+tbb+vtune: /lustre/spack/tools/linux-centos7-x86_64/intel-17.0.5/intel-parallel-studio-cluster.2017.5-h4hjkh276hoh7gcbkvhfqep3oadt6nck
