Change intel-mkl config entry and path (#24)
Fix the new multi-variant added to intel-mkl and add it to packages.yaml
The previous entry was complaining about no variant openmp (now it's
threads.) Fix the path to intel-mkl. New intel-mkl would add duplicate
path to entry.

--- a/etc/spack/defaults/cray/packages.yaml
+++ b/etc/spack/defaults/cray/packages.yaml
@@ -16,14 +16,14 @@ packages:
     intel-mkl:
         buildable: false
         paths:
-            intel-mkl@2017.2.174%gcc~ilp64~openmp~shared: /opt/intel/compilers_and_libraries_2017.2.174/linux/mkl
-            intel-mkl@2017.2.174%gcc+ilp64~openmp~shared: /opt/intel/compilers_and_libraries_2017.2.174/linux/mkl
-            intel-mkl@2017.2.174%gcc+ilp64+openmp~shared: /opt/intel/compilers_and_libraries_2017.2.174/linux/mkl
-            intel-mkl@2017.2.174%gcc+ilp64+openmp+shared: /opt/intel/compilers_and_libraries_2017.2.174/linux/mkl
-            intel-mkl@2017.2.174%intel~ilp64~openmp~shared: /opt/intel/compilers_and_libraries_2017.2.174/linux/mkl
-            intel-mkl@2017.2.174%intel+ilp64~openmp~shared: /opt/intel/compilers_and_libraries_2017.2.174/linux/mkl
-            intel-mkl@2017.2.174%intel+ilp64+openmp~shared: /opt/intel/compilers_and_libraries_2017.2.174/linux/mkl
-            intel-mkl@2017.2.174%intel+ilp64+openmp+shared: /opt/intel/compilers_and_libraries_2017.2.174/linux/mkl
+            intel-mkl@2017.2.174%gcc~ilp64~shared: /opt/intel
+            intel-mkl@2017.2.174%gcc+ilp64~shared: /opt/intel
+            intel-mkl@2017.2.174%gcc+ilp64 threads=openmp ~shared: /opt/intel
+            intel-mkl@2017.2.174%gcc+ilp64 threads=openmp +shared: /opt/intel
+            intel-mkl@2017.2.174%intel~ilp64~shared: /opt/intel
+            intel-mkl@2017.2.174%intel+ilp64~shared: /opt/intel
+            intel-mkl@2017.2.174%intel+ilp64 threads=openmp ~shared: /opt/intel
+            intel-mkl@2017.2.174%intel+ilp64 threads=openmp +shared: /opt/intel
     fftw:
         buildable: false
         modules:
