Only ignore yaml config files in root dir

--- a/.gitignore
+++ b/.gitignore
@@ -25,9 +25,9 @@
 /bin/spackc
 /cache
 /linux
-compilers.yaml
-config.yaml
-mirrors.yaml
-modules.yaml
-packages.yaml
-repos.yaml
+/compilers.yaml
+/config.yaml
+/mirrors.yaml
+/modules.yaml
+/packages.yaml
+/repos.yaml
