--- a/etc/spack/defaults/packages.yaml
+++ b/etc/spack/defaults/packages.yaml
@@ -21,6 +21,7 @@ packages:
       blas: [openblas]
       daal: [intel-daal]
       elf: [elfutils]
+      gl: [opengl]
       golang: [gcc]
       ipp: [intel-ipp]
       java: [jdk]
@@ -36,3 +37,7 @@ packages:
       szip: [libszip, libaec]
       tbb: [intel-tbb]
       jpeg: [libjpeg-turbo, libjpeg]
+  opengl:
+    paths:
+      opengl: /usr
+    buildable: False
