Add gcc into packages.

--- a/packages.yaml
+++ b/packages.yaml
@@ -94,3 +94,10 @@ packages:
             environment-modules@3.2.10%gcc@4.8.5 arch=linux-centos7-x86_64: /lustre/spack/tools/linux-centos7-x86_64/gcc-4.8.5/environment-modules-3.2.10-n3gn6zmyoqplsuxc56lrrzst5axfhdpg
         version: [3.2.10]
         buildable: False
+
+    gcc:
+        paths:
+            gcc@4.9.4%gcc@4.8.5 arch=linux-centos7-x86_64: /lustre/spack/tools/linux-centos7-x86_64/gcc-4.8.5/gcc-4.9.4-bteji2yr2kpg2pq5ocemtlu2pa3cpzjt
+            gcc@5.4.0%gcc@4.8.5 arch=linux-centos7-x86_64: /lustre/spack/tools/linux-centos7-x86_64/gcc-4.8.5/gcc-5.4.0-b7ges7uf6wrair6elnjx4bnvzqrv5pda
+            gcc@6.4.0%gcc@4.8.5 arch=linux-centos7-x86_64: /lustre/spack/tools/linux-centos7-x86_64/gcc-4.8.5/gcc-6.4.0-z3457r46gt7ctihyd6ejkz4asud4i47r
+        buildable: False
